# Director

./: .gitignore
ApiGateway/: Cargo.toml  build.rs
ApiGateway/src/: clients.rs  main.rs  service.rs
Director/: pyproject.toml  pyrightconfig.json
Director/scripts/: generate_proto.sh
Director/src/: main.py
Director/src/app/: __init__.py
Director/src/app/api/: __init__.py  engine_client.py  file_gateway_client.py  gateway_client.py
Director/src/app/api/proto/: __init__.py  api_gateway_pb2.py  api_gateway_pb2_grpc.py  director_pb2.py  director_pb2_grpc.py  file_gateway_pb2.py  file_gateway_pb2_grpc.py
Director/src/app/components/: __init__.py  create_project_dialog.py  editor_placeholder.py  main_window.py  project_hub.py  project_list.py  remote_file_browser.py
Director/src/app/components/editor/: __init__.py  assets_panel.py  editor_widget.py  project_data.py  timeline.py  video_player.py
Director/src/app/models/: __init__.py  project.py
Director/src/app/store/: __init__.py  actions.py  app_store.py
Director/src/app/utils/: __init__.py  rx_qt.py  styles.py
Director/src/resources/: .gitkeep
DirectorEngine/: Cargo.toml  build.rs
DirectorEngine/src/: main.rs
DirectorEngine/src/project/: manager.rs  mod.rs  service.rs
FileGateway/: Cargo.toml  build.rs
FileGateway/src/: main.rs  service.rs
FileGateway/src/storage/: config.rs  local.rs  mod.rs  provider.rs  types.rs
proto/: api_gateway.proto  director.proto  file_gateway.proto
scripts/: build.sh  run_all.sh  stop_all.sh
