[package]
name = "file-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
mime_guess = "2"
fs_extra = "1"
async-stream = "0.3"
libc = "0.2"
bytes = "1"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

